--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -839,7 +839,7 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    TBD
+    Please skim <a href="https://rafalab.github.io/dsbook/r-basics.html">Rafalab Chapter 2</a>,  <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a> and <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a>
   </div>
 </div>
 <p>Please start to work on HW1 that will be due at 10 PM on Monday, 09/19. You are required to submit the HW via GitHub (i.e., push your submission to the GitHub repo named &lsquo;hw1-username&rsquo; under the class GitHub organization, <a href="https://github.com/orgs/stat220/" target="_blank" rel="noopener">Stat220</a>). Please do not forget to knit your final .Rmd file to .pdf before pushing.</p>
