--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -842,6 +842,8 @@ Before next class Students are expected to open a GitHub account, verify it, and
     Please skim <a href="https://rafalab.github.io/dsbook/r-basics.html">Rafalab Chapter 2</a>,  <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a> and <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a>
   </div>
 </div>
+<p>It is useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=FdVy57oGJuc" target="_blank" rel="noopener">Basics of ggplot2</a> before class.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc?start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Please start to work on HW1 that will be due at 10 PM on Monday, 09/19. You are required to submit the HW via GitHub (i.e., push your submission to the GitHub repo named &lsquo;hw1-username&rsquo; under the class GitHub organization, <a href="https://github.com/orgs/stat220/" target="_blank" rel="noopener">Stat220</a>). Please do not forget to knit your final .Rmd file to .pdf before pushing.</p>
 
           </div>
