--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -845,6 +845,12 @@ Before next class Students are expected to open a GitHub account, verify it, and
 <p>It is useful to go over this interesting video on <a href="https://www.youtube.com/watch?v=FdVy57oGJuc" target="_blank" rel="noopener">Basics of ggplot2</a> before class.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FdVy57oGJuc?start=43" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Please start to work on HW1 that will be due at 10 PM on Monday, 09/19. You are required to submit the HW via GitHub (i.e., push your submission to the GitHub repo named &lsquo;hw1-username&rsquo; under the class GitHub organization, <a href="https://github.com/orgs/stat220/" target="_blank" rel="noopener">Stat220</a>). Please do not forget to knit your final .Rmd file to .pdf before pushing.</p>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>Basic R Objects</li>
+<li>Basic Visualizations with <code>ggplot2</code></li>
+</ul>
+<p>Day 3 Slides (<a href="/stat220/Day3.pdf" target="_blank">pdf</a>/<a href="/stat220/Day3.html" target="_blank">html</a>)</p>
 
           </div>
 
