--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -713,6 +713,10 @@ Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.a
 
 
 
+  <li class=""><a href="/courses/stat220/week2/">Week 1</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/homework-in-stat-220/">Assignments in Stat 220</a></li>
 
 
