--- a/public/courses/stat220/rstudio-in-stat-220/index.html
+++ b/public/courses/stat220/rstudio-in-stat-220/index.html
@@ -712,6 +712,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/week2/">Week 1</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/homework-in-stat-220/">Assignments in Stat 220</a></li>
 
 
