--- a/static/stat220/Day4.html
+++ b/static/stat220/Day4.html
@@ -1221,6 +1221,24 @@ ggplot(Chicago, aes(x=low_temp, y=high_temp)) +
 &lt;img src="Day4_files/figure-html/weather-patterns10_auto_02_output-1.svg" width="100%" /&gt;
 ]
 
+---
+count: false
+ 
+## Weather patterns
+.panel1-weather-patterns10-auto[
+
+```r
+ggplot(Chicago, aes(x=low_temp, y=high_temp)) +
+  geom_point(aes(color=as.factor(month))) +
+* theme(legend.spacing.y = unit(0.5, "cm"),
+*       legend.key.size = unit(0.5, "cm"))
+```
+]
+ 
+.panel2-weather-patterns10-auto[
+&lt;img src="Day4_files/figure-html/weather-patterns10_auto_03_output-1.svg" width="100%" /&gt;
+]
+
 &lt;style&gt;
 .panel1-weather-patterns10-auto {
   color: black;
@@ -1465,12 +1483,32 @@ count: false
 
 ```r
 ggplot(Chicago, aes(x=avg_temp)) +
-* geom_density(fill='lightblue', alpha=0.5)
+* geom_density(fill='lightblue',
+*              alpha=0.5)
 ```
 ]
  
 .panel2-weather-patterns14-auto[
 &lt;img src="Day4_files/figure-html/weather-patterns14_auto_02_output-1.svg" width="100%" /&gt;
+]
+
+---
+count: false
+ 
+## Weather patterns
+.panel1-weather-patterns14-auto[
+
+```r
+ggplot(Chicago, aes(x=avg_temp)) +
+  geom_density(fill='lightblue',
+               alpha=0.5) +
+* theme(legend.spacing.y = unit(0.5, "cm"),
+*       legend.key.size = unit(0.5, "cm"))
+```
+]
+ 
+.panel2-weather-patterns14-auto[
+&lt;img src="Day4_files/figure-html/weather-patterns14_auto_03_output-1.svg" width="100%" /&gt;
 ]
 
 &lt;style&gt;
@@ -1528,7 +1566,9 @@ count: false
 
 ```r
 ggplot(Chicago, aes(x=avg_temp, group=month)) +
-* geom_density(aes(color=as.factor(month), fill=as.factor(month)), alpha=0.5)
+* geom_density(aes(color=as.factor(month),
+*                  fill=as.factor(month)),
+*              alpha=0.5)
 ```
 ]
  
@@ -1544,13 +1584,36 @@ count: false
 
 ```r
 ggplot(Chicago, aes(x=avg_temp, group=month)) +
-  geom_density(aes(color=as.factor(month), fill=as.factor(month)), alpha=0.5) +
+  geom_density(aes(color=as.factor(month),
+                   fill=as.factor(month)),
+               alpha=0.5) +
 * facet_wrap(~month, nrow=3)
 ```
 ]
  
 .panel2-weather-patterns16-auto[
 &lt;img src="Day4_files/figure-html/weather-patterns16_auto_03_output-1.svg" width="100%" /&gt;
+]
+
+---
+count: false
+ 
+## Weather patterns
+.panel1-weather-patterns16-auto[
+
+```r
+ggplot(Chicago, aes(x=avg_temp, group=month)) +
+  geom_density(aes(color=as.factor(month),
+                   fill=as.factor(month)),
+               alpha=0.5) +
+  facet_wrap(~month, nrow=3) +
+* theme(legend.spacing.y = unit(0.5, "cm"),
+*       legend.key.size = unit(0.5, "cm"))
+```
+]
+ 
+.panel2-weather-patterns16-auto[
+&lt;img src="Day4_files/figure-html/weather-patterns16_auto_04_output-1.svg" width="100%" /&gt;
 ]
 
 &lt;style&gt;
@@ -1608,7 +1671,9 @@ count: false
 
 ```r
 ggplot(Chicago, aes(x=avg_vis, group=month)) +
-* geom_density(aes(color=as.factor(month), fill=as.factor(month)), alpha=0.5)
+* geom_density(aes(color=as.factor(month),
+*                  fill=as.factor(month)),
+*              alpha=0.5)
 ```
 ]
  
@@ -1624,13 +1689,36 @@ count: false
 
 ```r
 ggplot(Chicago, aes(x=avg_vis, group=month)) +
-  geom_density(aes(color=as.factor(month), fill=as.factor(month)), alpha=0.5) +
+  geom_density(aes(color=as.factor(month),
+                   fill=as.factor(month)),
+               alpha=0.5) +
 * facet_wrap(~month, nrow=3)
 ```
 ]
  
 .panel2-weather-patterns17-auto[
 &lt;img src="Day4_files/figure-html/weather-patterns17_auto_03_output-1.svg" width="100%" /&gt;
+]
+
+---
+count: false
+ 
+## Weather patterns
+.panel1-weather-patterns17-auto[
+
+```r
+ggplot(Chicago, aes(x=avg_vis, group=month)) +
+  geom_density(aes(color=as.factor(month),
+                   fill=as.factor(month)),
+               alpha=0.5) +
+  facet_wrap(~month, nrow=3) +
+* theme(legend.spacing.y = unit(0.5, "cm"),
+*       legend.key.size = unit(0.5, "cm"))
+```
+]
+ 
+.panel2-weather-patterns17-auto[
+&lt;img src="Day4_files/figure-html/weather-patterns17_auto_04_output-1.svg" width="100%" /&gt;
 ]
 
 &lt;style&gt;
@@ -1689,7 +1777,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_6324e742" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_dbd81866" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
