--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Mondaay, 09/19
+  <meta name="description" content="Monday, 09/19
 Before Class We will delve deeply into ggplot2, learn about advanced visualization in this class, and do some fun activity in this class.
  Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10   In Class  Common ggplot2 layers Advanced visualizations  Day 4 Slides (pdf/html)" />
 
@@ -306,7 +306,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
-  <meta property="og:description" content="Mondaay, 09/19
+  <meta property="og:description" content="Monday, 09/19
 Before Class We will delve deeply into ggplot2, learn about advanced visualization in this class, and do some fun activity in this class.
  Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10   In Class  Common ggplot2 layers Advanced visualizations  Day 4 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
@@ -814,7 +814,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
           <h1>Week 2</h1>
 
           <div class="article-style">
-            <p><span style="color:orange"><strong>Mondaay, 09/19</strong></span></p>
+            <p><span style="color:orange"><strong>Monday, 09/19</strong></span></p>
 <h3 id="before-class">Before Class</h3>
 <p>We will delve deeply into <code>ggplot2</code>, learn about advanced visualization in this class, and do some fun activity in this class.</p>
 <div class="alert alert-note">
@@ -828,6 +828,22 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
 <li>Advanced visualizations</li>
 </ul>
 <p>Day 4 Slides (<a href="/stat220/Day4.pdf" target="_blank">pdf</a>/<a href="/stat220/Day4.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Wednesday, 09/21</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<ul>
+<li>Go over previous in-class activities, lectures.</li>
+</ul>
+<div class="alert alert-note">
+  <div>
+    Please skim through <a href="https://clauswilke.com/dataviz/coordinate-systems-axes.html">Coordinate Systems and Axes</a> and <a href="https://clauswilke.com/dataviz/geospatial-data.html">Visualizing Spatial Data</a>
+  </div>
+</div>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>Some more useful aesthetics</li>
+<li>More advanced maps</li>
+</ul>
+<!-- Day 5 Slides (<a href="/pdf/Day5/Day5.pdf" target="_blank">pdf</a>/<a href="/pdf/Day5/Day5.html" target="_blank">html</a>) -->
 
           </div>
 
