--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 09/19
-Before Class We will delve deeply into ggplot2, learn about advanced visualization in this class, and do some fun activity in this class.
+Before Class We will delve deeply into ggplot2, learn about advanced visualization, and do some fun activity in this class.
  Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10   In Class  Common ggplot2 layers Advanced visualizations  Day 4 Slides (pdf/html)" />
 
   
@@ -307,7 +307,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 09/19
-Before Class We will delve deeply into ggplot2, learn about advanced visualization in this class, and do some fun activity in this class.
+Before Class We will delve deeply into ggplot2, learn about advanced visualization, and do some fun activity in this class.
  Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10   In Class  Common ggplot2 layers Advanced visualizations  Day 4 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
@@ -816,7 +816,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
           <div class="article-style">
             <p><span style="color:orange"><strong>Monday, 09/19</strong></span></p>
 <h3 id="before-class">Before Class</h3>
-<p>We will delve deeply into <code>ggplot2</code>, learn about advanced visualization in this class, and do some fun activity in this class.</p>
+<p>We will delve deeply into <code>ggplot2</code>, learn about advanced visualization, and do some fun activity in this class.</p>
 <div class="alert alert-note">
   <div>
     Continue reading <a href="https://r4ds.had.co.nz/data-visualisation.html#introduction-1">GW Chapter 3</a>, <a href="https://r4ds.had.co.nz/graphics-for-communication.html">GW Chapter 28</a>, and <a href="https://rafalab.github.io/dsbook/data-visualization-principles.html">Irizarry Chapter 10</a>
@@ -831,7 +831,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
 <p><span style="color:orange"><strong>Wednesday, 09/21</strong></span></p>
 <h3 id="before-class-1">Before Class</h3>
 <ul>
-<li>Go over previous in-class activities, lectures.</li>
+<li>Go over previous in-class activities, lectures. Also, start working on HW2 that is due at 10 PM this Saturday, $24^{th}$.</li>
 </ul>
 <div class="alert alert-note">
   <div>
@@ -841,9 +841,9 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
 <h3 id="in-class-1">In Class</h3>
 <ul>
 <li>Some more useful aesthetics</li>
-<li>More advanced maps</li>
+<li>More advanced visualization including maps</li>
 </ul>
-<!-- Day 5 Slides (<a href="/pdf/Day5/Day5.pdf" target="_blank">pdf</a>/<a href="/pdf/Day5/Day5.html" target="_blank">html</a>) -->
+<p>Day 5 Slides (<a href="/stat220/Day5.pdf" target="_blank">pdf</a>/<a href="/stat220/Day5.html" target="_blank">html</a>)</p>
 
           </div>
 
