--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -844,6 +844,20 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
 <li>More advanced visualization including maps</li>
 </ul>
 <p>Day 5 Slides (<a href="/stat220/Day5.pdf" target="_blank">pdf</a>/<a href="/stat220/Day5.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Friday, 09/23</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://r4ds.had.co.nz/transform.html">GW Chapter 5</a>, <a href="https://rafalab.github.io/dsbook/tidyverse.html">Irizarry Sections 4.1-4.11</a>(optional), and start working on individual HW2.
+  </div>
+</div>
+<p>Also, it may be useful to go over this short video on the <a href="https://www.youtube.com/watch?v=BaFkbNOaof8" target="_blank" rel="noopener">basics of <code>dplyr</code></a> before class.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BaFkbNOaof8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 id="in-class-2">In Class</h3>
+<ul>
+<li>Basic data wrangling</li>
+<li>Implementation of the five verbs</li>
+</ul>
 
           </div>
 
