--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -858,6 +858,7 @@ Before Class We will delve deeply into ggplot2, learn about advanced visualizati
 <li>Basic data wrangling</li>
 <li>Implementation of the five verbs</li>
 </ul>
+<p>Day 6 Slides (<a href="/stat220/Day6.pdf" target="_blank">pdf</a>/<a href="/stat220/Day6.html" target="_blank">html</a>)</p>
 
           </div>
 
