--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -61,8 +61,7 @@
     
   
   <meta name="description" content="Monday, 09/26
-Before Class Start working on HW3 by 10 PM. The first midterm will be held in class this Friday, 09/30.
-Please read R Style Guide Chapters 2,4, and 5, Irizarry Chapter 23, GW Chapter 13(optional) It would also be nice to go over this short video in joining data with dplyr." />
+Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be a nice practice for your midterm. The first midterm will be held in class this Friday, 09/30." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week3/" />
@@ -307,8 +306,7 @@ Please read R Style Guide Chapters 2,4, and 5, Irizarry Chapter 23, GW Chapter 1
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week3/" />
   <meta property="og:title" content="Week 3 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 09/26
-Before Class Start working on HW3 by 10 PM. The first midterm will be held in class this Friday, 09/30.
-Please read R Style Guide Chapters 2,4, and 5, Irizarry Chapter 23, GW Chapter 13(optional) It would also be nice to go over this short video in joining data with dplyr." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be a nice practice for your midterm. The first midterm will be held in class this Friday, 09/30." /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -820,7 +818,7 @@ Please read R Style Guide Chapters 2,4, and 5, Irizarry Chapter 23, GW Chapter 1
           <div class="article-style">
             <p><span style="color:orange"><strong>Monday, 09/26</strong></span></p>
 <h3 id="before-class">Before Class</h3>
-<p>Start working on HW3 by 10 PM. The first midterm will be held in class this Friday, 09/30.</p>
+<p>Start working on HW3 due by 10 PM this Wednesday. This will also be a nice practice for your midterm. The first midterm will be held in class this Friday, 09/30.</p>
 <div class="alert alert-note">
   <div>
     Please read <a href="https://style.tidyverse.org/" target="_blank" rel="noopener">R Style Guide Chapters 2,4, and 5</a>,  <a href="https://rafalab.github.io/dsbook/joining-tables.html" target="_blank" rel="noopener">Irizarry Chapter 23</a>, <a href="https://r4ds.had.co.nz/relational-data.html#introduction-7" target="_blank" rel="noopener">GW Chapter 13</a>(optional)
