--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -831,6 +831,7 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
 <li>More data wrangling</li>
 <li>Basic data joins (two-table verbs)</li>
 </ul>
+<p>Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>)</p>
 
           </div>
 
