--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -832,7 +832,19 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
 <li>Basic data joins (two-table verbs)</li>
 </ul>
 <p>Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>)</p>
-
+<p><span style="color:orange"><strong>Wednesday, 09/28</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://r4ds.had.co.nz/tidy-data.html" target="_blank" rel="noopener">GW Chapter 12</a> on tidy data and reshaping data.
+  </div>
+</div>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>Wide Vs Long data</li>
+<li>Some more data cleaning tools</li>
+</ul>
+<!-- Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>) -->
           </div>
 
           
