--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -843,6 +843,7 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
 <ul>
 <li>Wide Vs Long data</li>
 <li>Some more data cleaning tools</li>
+<li>Simple intro to date manipulations</li>
 </ul>
 <!-- Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>) -->
           </div>
