--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -845,7 +845,8 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
 <li>Some more data cleaning tools</li>
 <li>Simple intro to date manipulations</li>
 </ul>
-<!-- Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>) -->
+<p>Day 8 Slides (<a href="/stat220/Day8.pdf" target="_blank">pdf</a>/<a href="/stat220/Day8.html" target="_blank">html</a>)</p>
+
           </div>
 
           
