--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -709,6 +709,10 @@ Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10 In Class C
       
 
 
+  <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
 
 
