--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -709,6 +709,10 @@ Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.a
       
 
 
+  <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
 
 
