--- a/public/courses/stat220/software/index.html
+++ b/public/courses/stat220/software/index.html
@@ -710,6 +710,10 @@ The server version of RStudio on the web at (https://maize." /><meta property="o
       
 
 
+  <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
 
 
