--- a/public/courses/stat220/week1/index.html
+++ b/public/courses/stat220/week1/index.html
@@ -711,6 +711,10 @@ Before next class Students are expected to open a GitHub account, verify it, and
       
 
 
+  <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week3/">Week 3</a></li>
 
 
