--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -832,6 +832,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>Data Import tools</li>
 <li>More on lubridate</li>
 </ul>
+<!-- Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>) -->
 
           </div>
 
