--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -62,7 +62,8 @@
   
   <meta name="description" content="Simple Data file
 Medium Data file
-Tricky Data file" />
+Tricky Data file
+More Tricky Data file" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/data/" />
@@ -308,7 +309,8 @@ Tricky Data file" />
   <meta property="og:title" content="Link to datasets | Deepak Bastola" />
   <meta property="og:description" content="Simple Data file
 Medium Data file
-Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Tricky Data file
+More Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -825,6 +827,7 @@ Tricky Data file" /><meta property="og:image" content="https://deepbas.netlify.a
             <p><a href="/data/simple-1.dat" target="_blank">Simple Data file</a></p>
 <p><a href="/data/mild-1.csv" target="_blank">Medium Data file</a></p>
 <p><a href="/data/tricky-1.csv" target="_blank">Tricky Data file</a></p>
+<p><a href="/data/tricky-2.csv" target="_blank">More Tricky Data file</a></p>
 
           </div>
 
