--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 10/03
-Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importing data. If you need more indepth description of dates/times in lubridate, read GW Chapter 16 In Class Data Import tools More on lubridate " />
+Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importing data. If you need more indepth description of dates/times in lubridate, read GW Chapter 16 In Class Data Import tools More on lubridate Day 10 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week4/" />
@@ -306,7 +306,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week4/" />
   <meta property="og:title" content="Week 4 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 10/03
-Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importing data. If you need more indepth description of dates/times in lubridate, read GW Chapter 16 In Class Data Import tools More on lubridate " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importing data. If you need more indepth description of dates/times in lubridate, read GW Chapter 16 In Class Data Import tools More on lubridate Day 10 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -832,7 +832,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>Data Import tools</li>
 <li>More on lubridate</li>
 </ul>
-<!-- Day 7 Slides (<a href="/stat220/Day7.pdf" target="_blank">pdf</a>/<a href="/stat220/Day7.html" target="_blank">html</a>) -->
+<p>Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>)</p>
 
           </div>
 
