--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -833,6 +833,18 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>More on lubridate</li>
 </ul>
 <p>Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Wednesday, 10/05</strong></span></p>
+<div class="alert alert-note">
+  <div>
+    Please gently read <a href="https://rafalab.github.io/dsbook/string-processing.html" target="_blank" rel="noopener">Irizarry Case Studies 1 and 2 from chapter 25</a> on string parsing.
+  </div>
+</div>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>Basic overview of <code>stringr</code></li>
+<li>String manipulation</li>
+</ul>
+<!-- Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) -->
 
           </div>
 
