--- a/static/stat220/Day10.html
+++ b/static/stat220/Day10.html
@@ -221,7 +221,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_e9c0ee65" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_6a9f30d4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -501,7 +501,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_7cff64ca" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_4b5958b8" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -630,15 +630,15 @@ class: middle
 first_day &lt;- ymd_hm("2022-09-12 11:10")
 classtime &lt;- now() - first_day
 classtime
-Time difference of 21.18321 days
+Time difference of 21.19725 days
 ```
 
 
 ```r
 as.period(classtime)
-[1] "21d 4H 23M 49.1275994777679S"
+[1] "21d 4H 44M 2.33177208900452S"
 as.duration(classtime)
-[1] "1830229.12759948s (~3.03 weeks)"
+[1] "1831442.33177209s (~3.03 weeks)"
 ```
 ]
 
@@ -650,14 +650,14 @@ as.duration(classtime)
 ```r
 diff1 &lt;- first_day %--% now()
 diff1/dminutes(1)
-[1] 30503.82
+[1] 30524.04
 ```
 
 
 ```r
 diff2 &lt;- interval(first_day, now())
 diff2/dminutes(1)
-[1] 30503.82
+[1] 30524.04
 ```
 
 ]
