--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -836,7 +836,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <p><span style="color:orange"><strong>Wednesday, 10/05</strong></span></p>
 <div class="alert alert-note">
   <div>
-    Please gently read <a href="https://rafalab.github.io/dsbook/string-processing.html" target="_blank" rel="noopener">Irizarry Case Studies 1 and 2 from chapter 25</a> on string parsing.
+    Please gently read <a href="https://rafalab.github.io/dsbook/string-processing.html" target="_blank" rel="noopener">Irizarry Case Studies 1 and 2 from chapter 25</a> on string parsing. Also, skim through <a href="https://r4ds.had.co.nz/strings.html" target="_blank" rel="noopener">GW Chapter 14</a> on strings and regular expressions.
   </div>
 </div>
 <h3 id="in-class-1">In Class</h3>
@@ -844,7 +844,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>Basic overview of <code>stringr</code></li>
 <li>String manipulation</li>
 </ul>
-<!-- Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) -->
+<p>Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>)</p>
 
           </div>
 
