--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -845,6 +845,18 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>String manipulation</li>
 </ul>
 <p>Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Friday, 10/07</strong></span></p>
+<div class="alert alert-note">
+  <div>
+    Continue reading <a href="https://r4ds.had.co.nz/strings.html" target="_blank" rel="noopener">GW Chapter 14</a> on strings and regular expressions. Also, go over <a href="https://r4ds.had.co.nz/factors.html" target="_blank" rel="noopener">GW chapter 15</a>
+  </div>
+</div>
+<h3 id="in-class-2">In Class</h3>
+<ul>
+<li>Factors with <em>forcats</em></li>
+<li>String manipulation</li>
+</ul>
+<!-- Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) -->
 
           </div>
 
