--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -856,7 +856,7 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 <li>Factors with <em>forcats</em></li>
 <li>String manipulation</li>
 </ul>
-<!-- Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) -->
+<p>Day 12 Slides (<a href="/stat220/Day12.pdf" target="_blank">pdf</a>/<a href="/stat220/Day12.html" target="_blank">html</a>)</p>
 
           </div>
 
