--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -707,6 +707,10 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
       
 
 
+  <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
 
 
