--- a/static/stat220/Day12.html
+++ b/static/stat220/Day12.html
@@ -50,7 +50,7 @@ class: title-slide, middle
 
 ### .fancy[Fall 2022]
 
- October 07 2022
+ October 09 2022
 
 ---
 
@@ -73,8 +73,8 @@ class: title-slide, middle
 
 ]
 
-.footnote[See [`forcats` cheatsheet](https://github.com/rstudio/cheatsheets/raw/master/factors.pdf)
-and [`forcats` vignette]()]
+.footnote[See [`forcats` cheatsheet](http://www.flutterbys.com.au/stats/downloads/slides/figure/factors.pdf)
+and [`forcats` vignette](https://forcats.tidyverse.org/)]
 
 ---
 
@@ -8715,7 +8715,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_ad64b5c1" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_cc96375c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -8815,8 +8815,8 @@ str_view_all(name_phone,
              pattern = "([2-9][0-9]{2})[.-]([0-9]{3})[.-]([0-9]{4})")
 ```
 
-<div id="htmlwidget-5159dd84626e60a81969" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-5159dd84626e60a81969">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204.192.9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250.209.7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-bbd8228c92e0fef081bb" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-bbd8228c92e0fef081bb">{"x":{"html":"<ul>\n  <li>Moly Robins: <span class='match'>250-999-8878<\/span><\/li>\n  <li>Ali Duluth: <span class='match'>416-908-2044<\/span><\/li>\n  <li>Eli Mitchell: <span class='match'>204.192.9829<\/span><\/li>\n  <li>May Flowers: <span class='match'>250.209.7047<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ---
 
@@ -8890,8 +8890,8 @@ phone_numbers &lt;- c("515 111 2244", "310 549 6892", "474 234 7548")
 str_view(phone_numbers, "(\\d)\\d\\1")
 ```
 
-<div id="htmlwidget-b1ec01bab091793eb1b9" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-b1ec01bab091793eb1b9">{"x":{"html":"<ul>\n  <li><span class='match'>515<\/span> 111 2244<\/li>\n  <li>310 549 6892<\/li>\n  <li><span class='match'>474<\/span> 234 7548<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-c2d20a811b47556841ba" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-c2d20a811b47556841ba">{"x":{"html":"<ul>\n  <li><span class='match'>515<\/span> 111 2244<\/li>\n  <li>310 549 6892<\/li>\n  <li><span class='match'>474<\/span> 234 7548<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 
 ---
@@ -8912,8 +8912,8 @@ aboutMe &lt;- c("my SSN is 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d?") # space followed by 0 or 1 digit
 ```
 
-<div id="htmlwidget-f619a53e47ed264d45eb" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-f619a53e47ed264d45eb">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> <\/span>is<span class='match'> 5<\/span>36-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 5<\/span>5<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-080381d2aac2fd57031e" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-080381d2aac2fd57031e">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> <\/span>is<span class='match'> 5<\/span>36-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 5<\/span>5<\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 
 ]
 
@@ -8934,8 +8934,8 @@ aboutMe &lt;- c("my SSN is 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d+")  # space followed by 1 or more digits
 ```
 
-<div id="htmlwidget-cbc137556d9dc335dbd6" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-cbc137556d9dc335dbd6">{"x":{"html":"<ul>\n  <li>my SSN is<span class='match'> 536<\/span>-76-9423 and my age is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-aa6b82b24f2564896b45" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-aa6b82b24f2564896b45">{"x":{"html":"<ul>\n  <li>my SSN is<span class='match'> 536<\/span>-76-9423 and my age is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 
 ---
@@ -8955,8 +8955,8 @@ aboutMe &lt;- c("my SSN is 536-76-9423 and my age is 55")
 str_view_all(aboutMe, "\\s\\d*")  # space followed by 0 or more digits
 ```
 
-<div id="htmlwidget-951efcd1bbafb04304eb" style="width:960px;height:100%;" class="str_view html-widget"></div>
-<script type="application/json" data-for="htmlwidget-951efcd1bbafb04304eb">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> <\/span>is<span class='match'> 536<\/span>-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-fe55db02f6239d8d43d2" style="width:960px;height:100%;" class="str_view html-widget"></div>
+<script type="application/json" data-for="htmlwidget-fe55db02f6239d8d43d2">{"x":{"html":"<ul>\n  <li>my<span class='match'> <\/span>SSN<span class='match'> <\/span>is<span class='match'> 536<\/span>-76-9423<span class='match'> <\/span>and<span class='match'> <\/span>my<span class='match'> <\/span>age<span class='match'> <\/span>is<span class='match'> 55<\/span><\/li>\n<\/ul>"},"evals":[],"jsHooks":[]}</script>
 ]
 
 ---
@@ -8982,7 +8982,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_c0e2ad8b" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a72d2757" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
