--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -61,7 +61,7 @@
     
   
   <meta name="description" content="Monday, 10/10
-Before Class Please read IDS Chapter 26. Also, read this article by David Robinson and skim through this tutorial. In Class advanced text mining analyze tweets " />
+Before Class Please read IDS Chapter 26. Also, read this article by David Robinson and skim through this tutorial. In Class advanced text mining analyze tweets Day 13 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat220/week5/" />
@@ -306,7 +306,7 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat220/week5/" />
   <meta property="og:title" content="Week 5 | Deepak Bastola" />
   <meta property="og:description" content="Monday, 10/10
-Before Class Please read IDS Chapter 26. Also, read this article by David Robinson and skim through this tutorial. In Class advanced text mining analyze tweets " /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Before Class Please read IDS Chapter 26. Also, read this article by David Robinson and skim through this tutorial. In Class advanced text mining analyze tweets Day 13 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -836,8 +836,8 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
 <li>advanced text mining</li>
 <li>analyze tweets</li>
 </ul>
+<p>Day 13 Slides (<a href="/stat220/Day13.pdf" target="_blank">pdf</a>/<a href="/stat220/Day13.html" target="_blank">html</a>)</p>
 <!--
-Day 10 Slides (<a href="/stat220/Day10.pdf" target="_blank">pdf</a>/<a href="/stat220/Day10.html" target="_blank">html</a>) 
 
 <span style="color:orange">**Wednesday, 10/05**</span>
 
