--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -837,27 +837,22 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
 <li>analyze tweets</li>
 </ul>
 <p>Day 13 Slides (<a href="/stat220/Day13.pdf" target="_blank">pdf</a>/<a href="/stat220/Day13.html" target="_blank">html</a>)</p>
-<!--
-
-<span style="color:orange">**Wednesday, 10/05**</span>
-
-
+<p><span style="color:orange"><strong>Wednesday, 10/12</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please gently read <a href="https://rafalab.github.io/dsbook/string-processing.html" target="_blank" rel="noopener">Irizarry Case Studies 1 and 2 from chapter 25</a> on string parsing. Also, skim through <a href="https://r4ds.had.co.nz/strings.html" target="_blank" rel="noopener">GW Chapter 14</a> on strings and regular expressions.
+    Please read <a href="https://r4ds.had.co.nz/functions.html" target="_blank" rel="noopener">GW Chapter 19</a> on writing functions in R. If you have no prior experience in writing functions, the following video would give you a nice overview (using R).
   </div>
 </div>
-
-
-### In Class
-
-- Basic overview of `stringr`
-- String manipulation 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p8tAQx7ijXE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>Basic functions</li>
+<li>Application to word cloud visualizations</li>
+</ul>
+<!-- 
 
 Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) 
-
-
-
 
 <span style="color:orange">**Friday, 10/07**</span>
 
