--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -850,9 +850,9 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
 <li>Basic functions</li>
 <li>Application to word cloud visualizations</li>
 </ul>
+<p>Day 14 Slides (<a href="/stat220/Day14.pdf" target="_blank">pdf</a>/<a href="/stat220/Day14.html" target="_blank">html</a>)</p>
 <!-- 
 
-Day 11 Slides (<a href="/stat220/Day11.pdf" target="_blank">pdf</a>/<a href="/stat220/Day11.html" target="_blank">html</a>) 
 
 <span style="color:orange">**Friday, 10/07**</span>
 
