--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -851,23 +851,18 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
 <li>Application to word cloud visualizations</li>
 </ul>
 <p>Day 14 Slides (<a href="/stat220/Day14.pdf" target="_blank">pdf</a>/<a href="/stat220/Day14.html" target="_blank">html</a>)</p>
-<!-- 
-
-
-<span style="color:orange">**Friday, 10/07**</span>
-
-
+<p><span style="color:orange"><strong>Friday, 10/14</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Continue reading <a href="https://r4ds.had.co.nz/strings.html" target="_blank" rel="noopener">GW Chapter 14</a> on strings and regular expressions. Also, go over <a href="https://r4ds.had.co.nz/factors.html" target="_blank" rel="noopener">GW chapter 15</a>
+    Please read <a href="https://r4ds.had.co.nz/iteration.html" target="_blank" rel="noopener">GW 21.1-21.5</a> on iterations and functionals.
   </div>
 </div>
-
-
-### In Class
-
-- Factors with *forcats*
-- String manipulation
+<h3 id="in-class-2">In Class</h3>
+<ul>
+<li>Iterations and functionals</li>
+</ul>
+<!-- 
 
 Day 12 Slides (<a href="/stat220/Day12.pdf" target="_blank">pdf</a>/<a href="/stat220/Day12.html" target="_blank">html</a>) 
 
