--- a/public/courses/stat220/week5/index.html
+++ b/public/courses/stat220/week5/index.html
@@ -862,11 +862,8 @@ Before Class Please read IDS Chapter 26. Also, read this article by David Robins
 <ul>
 <li>Iterations and functionals</li>
 </ul>
-<!-- 
+<p>Day 15 Slides (<a href="/stat220/Day15.pdf" target="_blank">pdf</a>/<a href="/stat220/Day15.html" target="_blank">html</a>)</p>
 
-Day 12 Slides (<a href="/stat220/Day12.pdf" target="_blank">pdf</a>/<a href="/stat220/Day12.html" target="_blank">html</a>) 
-
--->
           </div>
 
           
