--- a/static/stat220/Day15.html
+++ b/static/stat220/Day15.html
@@ -47,7 +47,7 @@ class: title-slide, middle
 
 ### .fancy[Fall 2022]
 
- October 14 2022
+ October 15 2022
 
 ---
 
@@ -458,7 +458,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_32f46266" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5d5e28df" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -1002,7 +1002,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_26e743e4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_a3f7168f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
