--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -845,11 +845,8 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
 <ul>
 <li>Web Scraping Basics</li>
 </ul>
+<p>Day 16 Slides (<a href="/stat220/Day16.pdf" target="_blank">pdf</a>/<a href="/stat220/Day16.html" target="_blank">html</a>)</p>
 <!--
-
-Day 15 Slides (<a href="/stat220/Day15.pdf" target="_blank">pdf</a>/<a href="/stat220/Day15.html" target="_blank">html</a>) 
-
-
 
 <span style="color:orange">**Friday, 10/14**</span>
 
