--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -846,7 +846,23 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
 <li>Web Scraping Basics</li>
 </ul>
 <p>Day 16 Slides (<a href="/stat220/Day16.pdf" target="_blank">pdf</a>/<a href="/stat220/Day16.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Friday, 10/21</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please continue reading <a href="https://rafalab.github.io/dsbook/web-scraping.html" target="_blank" rel="noopener">Irizarry Chapter 24</a> on web scraping. Go over the slides and class activity from last class and practice using CSS Selector Gadget.
+  </div>
+</div>
+<h3 id="in-class-1">In class</h3>
+<ul>
+<li>Scraping multiple pages</li>
+<li>Some Interactive Plots and Data Tables</li>
+</ul>
 <!--
+
+
+Day 17 Slides (<a href="/pdf/Day17/Day17.pdf" target="_blank">pdf</a>/<a href="/pdf/Day17/Day17.html" target="_blank">html</a>)
+
 
 <span style="color:orange">**Friday, 10/14**</span>
 
