--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -858,12 +858,8 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
 <li>Scraping multiple pages</li>
 <li>Some Interactive Plots and Data Tables</li>
 </ul>
+<p>Day 17 Slides (<a href="/pdf/Day17/Day17.pdf" target="_blank">pdf</a>/<a href="/pdf/Day17/Day17.html" target="_blank">html</a>)</p>
 <!--
-
-
-Day 17 Slides (<a href="/pdf/Day17/Day17.pdf" target="_blank">pdf</a>/<a href="/pdf/Day17/Day17.html" target="_blank">html</a>)
-
-
 <span style="color:orange">**Friday, 10/14**</span>
 
 
