--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -858,7 +858,7 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
 <li>Scraping multiple pages</li>
 <li>Some Interactive Plots and Data Tables</li>
 </ul>
-<p>Day 17 Slides (<a href="/pdf/Day17/Day17.pdf" target="_blank">pdf</a>/<a href="/pdf/Day17/Day17.html" target="_blank">html</a>)</p>
+<p>Day 17 Slides (<a href="/stat220/Day17.pdf" target="_blank">pdf</a>/<a href="/stat220/Day17.html" target="_blank">html</a>)</p>
 <!--
 <span style="color:orange">**Friday, 10/14**</span>
 
