--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -711,6 +711,10 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
