--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -725,6 +725,10 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
