--- a/public/courses/stat220/data/index.html
+++ b/public/courses/stat220/data/index.html
@@ -715,6 +715,10 @@ More Tricky Data file" /><meta property="og:image" content="https://deepbas.netl
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
