--- a/public/courses/stat220/github-in-stat-220/index.html
+++ b/public/courses/stat220/github-in-stat-220/index.html
@@ -712,6 +712,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
