--- a/public/courses/stat220/software/index.html
+++ b/public/courses/stat220/software/index.html
@@ -714,6 +714,10 @@ The server version of RStudio on the web at (https://maize." /><meta property="o
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
