--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -711,6 +711,10 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
 
 
 
+  <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
 
 
