--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -843,6 +843,7 @@ Before Class Watch through a simple video on building a Shiny App below It would
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Fg-Ha44i1IM?start=36" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h3 id="in-class">In Class</h3>
 <p>We will see demonstrations of simple Shiny App. We will also go over Midterm II practice problems.</p>
+<p>Day 18 Slides (<a href="/stat220/Day18.pdf" target="_blank">pdf</a>/<a href="/stat220/Day18.html" target="_blank">html</a>)</p>
 
           </div>
 
