--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -850,7 +850,7 @@ Before Class Watch through a simple video on building a Shiny App below It would
 <h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Please go over the Shiny the tutorial from Monday and practice further using the resources provided there. Please also watch through a <a href="https://youtu.be/ak_NJCVrJXY" target="_blank" rel="noopener">video</a> on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works.
+    Please go over the Shiny tutorial from Monday and practice further using the resources provided there. Please also watch through a <a href="https://youtu.be/ak_NJCVrJXY" target="_blank" rel="noopener">video</a> on a simple demonstration of building a Shiny app below if you are still disoriented about how Shiny actually works.
   </div>
 </div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ak_NJCVrJXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
