--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -707,6 +707,10 @@ Before Class Please read GW Chapter 11 and skim through IDS Chapter 5 on importi
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
