--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -709,6 +709,10 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
       
 
 
+  <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week7/">Week 7</a></li>
 
 
