--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -852,9 +852,7 @@ Before Class Please go over previous class activities on Shiny App Implementatio
 </div>
 <h3 id="in-class">In Class</h3>
 <p>We will start basic classification and learn the basics of k-nearest-neighbors (kNN).</p>
-<!--
-Day 22 Slides (<a href="/stat220/Day22.pdf" target="_blank">pdf</a>/<a href="/stat220/Day22.html" target="_blank">html</a>)
--->
+<p>Day 22 Slides (<a href="/stat220/Day22.pdf" target="_blank">pdf</a>/<a href="/stat220/Day22.html" target="_blank">html</a>)</p>
 
           </div>
 
