--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -853,6 +853,18 @@ Before Class Please go over previous class activities on Shiny App Implementatio
 <h3 id="in-class">In Class</h3>
 <p>We will start basic classification and learn the basics of k-nearest-neighbors (kNN).</p>
 <p>Day 22 Slides (<a href="/stat220/Day22.pdf" target="_blank">pdf</a>/<a href="/stat220/Day22.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Friday, 11/04</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Read <a href="https://datasciencebook.ca/classification.html#puttingittogetherworkflow" target="_blank" rel="noopener">sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A First Introduction</a>
+  </div>
+</div>
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>KNN Model accuracy</li>
+</ul>
+<!-- Day 22 Slides (<a href="/stat220/Day22.pdf" target="_blank">pdf</a>/<a href="/stat220/Day22.html" target="_blank">html</a>) -->
 
           </div>
 
