--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -857,7 +857,7 @@ Before Class Please go over previous class activities on Shiny App Implementatio
 <h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Read <a href="https://datasciencebook.ca/classification.html#puttingittogetherworkflow" target="_blank" rel="noopener">sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A First Introduction</a>
+    Read <a href="https://datasciencebook.ca/classification2.html#evaluating-accuracy" target="_blank" rel="noopener">sections 5.7-5.8 and sections 6.3-6.7 of Data Science: A First Introduction</a>
   </div>
 </div>
 <h3 id="in-class-1">In Class</h3>
