--- a/public/courses/stat220/homework-in-stat-220/index.html
+++ b/public/courses/stat220/homework-in-stat-220/index.html
@@ -708,6 +708,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
 
 
