--- a/public/courses/stat220/index.html
+++ b/public/courses/stat220/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
 
 
