--- a/public/courses/stat220/week3/index.html
+++ b/public/courses/stat220/week3/index.html
@@ -707,6 +707,10 @@ Before Class Start working on HW3 due by 10 PM this Wednesday. This will also be
       
 
 
+  <li class=""><a href="/courses/stat220/week9/">Week 9</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week8/">Week 8</a></li>
 
 
