--- a/public/stat220/Day23.html
+++ b/public/stat220/Day23.html
@@ -353,7 +353,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_c25d5ddd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_f1fb69df" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -636,14 +636,14 @@ class: action, middle
 &lt;br&gt;
 .bq[
 - Please continue working on group activity 2
-- Consider calculating the accuracy metrics bt hand 
+- Consider calculating the accuracy metrics by hand 
 - Verify your calculations with R-code
 
 ]
 
 ]
 
-<div class="countdown" id="timer_83d48d02" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_c0204d02" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
