--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -851,9 +851,8 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <ul>
 <li>Cross validation and intro to logistic regression</li>
 </ul>
+<p>Day 24 Slides (<a href="/stat220/Day24.pdf" target="_blank">pdf</a>/<a href="/stat220/Day24.html" target="_blank">html</a>)</p>
 <!--
-Day 24 Slides (<a href="/stat220/Day24.pdf" target="_blank">pdf</a>/<a href="/stat220/Day24.html" target="_blank">html</a>) 
-
 
 <span style="color:orange">**Wednesday, 11/09**</span>
 
