--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -852,22 +852,18 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <li>Cross validation and intro to logistic regression</li>
 </ul>
 <p>Day 24 Slides (<a href="/stat220/Day24.pdf" target="_blank">pdf</a>/<a href="/stat220/Day24.html" target="_blank">html</a>)</p>
-<!--
-
-<span style="color:orange">**Wednesday, 11/09**</span>
-
-### Before Class
-
+<p><span style="color:orange"><strong>Wednesday, 11/09</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Read <a href="https://datasciencebook.ca/clustering.html" target="_blank" rel="noopener">Chapter 9 of Data Science: A First Introduction</a>. Also, skim through <a href="https://www.statlearning.com/" target="_blank" rel="noopener">section 12.4.2 (page 521-526) of An Introduction to Statistical Learning</a> on hierarchical clustering.
+    Read <a href="https://datasciencebook.ca/clustering.html" target="_blank" rel="noopener">Chapter 9 of Data Science: A First Introduction</a>.
   </div>
 </div>
-
-
-### In Class
-
-- K-means Clustering
+<h3 id="in-class-1">In Class</h3>
+<ul>
+<li>K-means Clustering</li>
+</ul>
+<!--
 
 Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>) -->
 
